# Moku

./: .gitignore  PKGBUILD  README.md  Todo  dev.moku.app.yml  flake.nix  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-appimage.yml  build-macos.yml  build-windows.yml
build-scripts/: bump.sh  release.sh
packaging/: cargo-sources.json  dev.moku.app.desktop  dev.moku.app.metainfo.xml
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/context/: ContextMenu.module.css  ContextMenu.tsx
src/components/downloads/: DownloadQueue.module.css  DownloadQueue.tsx
src/components/explore/: Explore.module.css  Explore.tsx  GenreDrillPage.module.css  GenreDrillPage.tsx  MangaPreview.module.css  MangaPreview.tsx
src/components/extensions/: ExtensionList.module.css  ExtensionList.tsx
src/components/layout/: Layout.module.css  Layout.tsx  Sidebar.module.css  Sidebar.tsx  SplashScreen.tsx  TitleBar.module.css  TitleBar.tsx  Toaster.module.css  Toaster.tsx
src/components/pages/: History.module.css  History.tsx  Library.module.css  Library.tsx  MigrateModal.module.css  MigrateModal.tsx  Reader.module.css  Reader.tsx  Search.module.css  Search.tsx  SeriesDetail.module.css  SeriesDetail.tsx
src/lib/: cache.ts  client.ts  keybinds.ts  queries.ts  sourceUtils.ts  types.ts
src/store/: index.ts
src/styles/: animations.css  global.css  tokens.css
(+8 files in other folders)
