[package]
name = "moku"
version = "0.2.0"
edition = "2021"

[lib]
name = "moku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "moku"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
nix = { version = "0.29", features = ["fs"] }
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
